c4prj1_deck/grade.txt
Grading at Mon Aug 12 05:07:19 UTC 2019
Compiling deck.c -> deck.o
deck.c: In function ‘deck_contains’:
deck.c:17:7: error: implicit declaration of function ‘com’ [-Werror=implicit-function-declaration]
   if (com(**(card+i),c)) return 1;
       ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
